--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-three/postprocessing": "^2.16.2",
     "leva": "^0.9.35",
     "next": "14.2.7",
+    "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "@react-three/gltfjsx": "^4.3.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
